# EpitechProjects

B-MAT-200-MLH-2-1-107transfer/: .gitignore  Cargo.toml  Makefile
B-OOP-400-MLH-4-1-arcade-axel.battigelli/B-OOP-400-MLH-4-1-arcade-axel.battigelli-main/: .clang-tidy  .gitignore  CMakeLists.txt  exemple.cpp  flake.nix
B-OOP-400-MLH-4-1-arcade-axel.battigelli/B-OOP-400-MLH-4-1-arcade-axel.battigelli-main/include/: common.hpp  ffi.hpp
B-OOP-400-MLH-4-1-arcade-axel.battigelli/B-OOP-400-MLH-4-1-arcade-axel.battigelli-main/include/Game/: IGame.hpp
B-OOP-400-MLH-4-1-arcade-axel.battigelli/B-OOP-400-MLH-4-1-arcade-axel.battigelli-main/include/Graphical/: IGraphical.hpp
B-OOP-400-MLH-4-1-arcade-axel.battigelli/B-OOP-400-MLH-4-1-arcade-axel.battigelli-main/include/Shared/: Data.hpp  Exception.hpp
B-OOP-400-MLH-4-1-arcade-axel.battigelli/B-OOP-400-MLH-4-1-arcade-axel.battigelli-main/src/arcade/: CMakeLists.txt  basicMenu.cpp  frontend.cpp  game.cpp  main.cpp  utils.cpp
B-OOP-400-MLH-4-1-arcade-axel.battigelli/B-OOP-400-MLH-4-1-arcade-axel.battigelli-main/src/arcade/include/: basicMenu.hpp  frontend.hpp  game.hpp  utils.hpp
B-OOP-400-MLH-4-1-arcade-axel.battigelli/B-OOP-400-MLH-4-1-arcade-axel.battigelli-main/src/common/: CMakeLists.txt  common.cpp
B-OOP-400-MLH-4-1-arcade-axel.battigelli/B-OOP-400-MLH-4-1-arcade-axel.battigelli-main/src/games/: CMakeLists.txt
B-OOP-400-MLH-4-1-arcade-axel.battigelli/B-OOP-400-MLH-4-1-arcade-axel.battigelli-main/src/games/game_layer/: CMakeLists.txt  main.cpp
B-OOP-400-MLH-4-1-arcade-axel.battigelli/B-OOP-400-MLH-4-1-arcade-axel.battigelli-main/src/games/minesweeper/: CMakeLists.txt  main.cpp
B-OOP-400-MLH-4-1-arcade-axel.battigelli/B-OOP-400-MLH-4-1-arcade-axel.battigelli-main/src/games/snake/: CMakeLists.txt  main.cpp
B-OOP-400-MLH-4-1-arcade-axel.battigelli/B-OOP-400-MLH-4-1-arcade-axel.battigelli-main/src/graphical_libs/: CMakeLists.txt
B-OOP-400-MLH-4-1-arcade-axel.battigelli/B-OOP-400-MLH-4-1-arcade-axel.battigelli-main/src/graphical_libs/graphic_layer/: CMakeLists.txt  main.cpp
B-OOP-400-MLH-4-1-arcade-axel.battigelli/B-OOP-400-MLH-4-1-arcade-axel.battigelli-main/src/graphical_libs/logger/: CMakeLists.txt  main.cpp
B-OOP-400-MLH-4-1-arcade-axel.battigelli/B-OOP-400-MLH-4-1-arcade-axel.battigelli-main/src/graphical_libs/ncurses/: CMakeLists.txt  main.cpp
B-OOP-400-MLH-4-1-arcade-axel.battigelli/B-OOP-400-MLH-4-1-arcade-axel.battigelli-main/src/graphical_libs/sdl2/: CMakeLists.txt  main.cpp
B-OOP-400-MLH-4-1-arcade-axel.battigelli/B-OOP-400-MLH-4-1-arcade-axel.battigelli-main/src/graphical_libs/sfml/: CMakeLists.txt  main.cpp
B-OOP-400-MLH-4-1-raytracer-axel.battigelli/B-OOP-400-MLH-4-1-raytracer-axel.battigelli-main/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  compile.sh  flake.nix  treefmt.nix
B-OOP-400-MLH-4-1-raytracer-axel.battigelli/B-OOP-400-MLH-4-1-raytracer-axel.battigelli-main/.github/workflows/: ci.yml
B-OOP-400-MLH-4-1-raytracer-axel.battigelli/B-OOP-400-MLH-4-1-raytracer-axel.battigelli-main/bonus/viewer/: CMakeLists.txt  main.cpp
B-OOP-400-MLH-4-1-raytracer-axel.battigelli/B-OOP-400-MLH-4-1-raytracer-axel.battigelli-main/include/: Exception.hpp
B-OOP-400-MLH-4-1-raytracer-axel.battigelli/B-OOP-400-MLH-4-1-raytracer-axel.battigelli-main/include/Core/: Camera.hpp  HitRecord.hpp  ILight.hpp  IMaterial.hpp  IPrimitive.hpp  Parser.hpp  Ppm.hpp  Scene.hpp
B-OOP-400-MLH-4-1-raytracer-axel.battigelli/B-OOP-400-MLH-4-1-raytracer-axel.battigelli-main/include/Core/Lights/: Sky.hpp  (+1 more)
B-OOP-400-MLH-4-1-raytracer-axel.battigelli/B-OOP-400-MLH-4-1-raytracer-axel.battigelli-main/include/Materials/: FlatColor.hpp  Mirror.hpp  Transparency.hpp
B-OOP-400-MLH-4-1-raytracer-axel.battigelli/B-OOP-400-MLH-4-1-raytracer-axel.battigelli-main/include/Math/: AABB.hpp  Ray.hpp  Vector3.hpp
B-OOP-400-MLH-4-1-raytracer-axel.battigelli/B-OOP-400-MLH-4-1-raytracer-axel.battigelli-main/include/Primitives/: BVHNode.hpp  Boxe.hpp  BoxeBuilder.hpp  Cone.hpp  ConeBuilder.hpp  Cylinder.hpp  CylinderBuilder.hpp  List.hpp  OBJFile.hpp  OBJFileBuilder.hpp  Plane.hpp  PlaneBuilder.hpp  Pyramide.hpp  PyramideBuilder.hpp  Sphere.hpp  SphereBuilder.hpp  Torus.hpp  TorusBuilder.hpp
B-OOP-400-MLH-4-1-raytracer-axel.battigelli/B-OOP-400-MLH-4-1-raytracer-axel.battigelli-main/src/: CMakeLists.txt  main.cpp
B-OOP-400-MLH-4-1-raytracer-axel.battigelli/B-OOP-400-MLH-4-1-raytracer-axel.battigelli-main/src/Core/: CMakeLists.txt  Camera.cpp  Parser.cpp  Ppm.cpp
B-OOP-400-MLH-4-1-raytracer-axel.battigelli/B-OOP-400-MLH-4-1-raytracer-axel.battigelli-main/src/Primitives/: BVHNode.cpp  Boxe.cpp  BoxeBuilder.cpp  CMakeLists.txt  Cone.cpp  ConeBuilder.cpp  Cylinder.cpp  CylinderBuilder.cpp  List.cpp  OBJFile.cpp  OBJFileBuilder.cpp  Plane.cpp  PlaneBuilder.cpp  Pyramide.cpp  PyramideBuilder.cpp  Sphere.cpp  SphereBuilder.cpp  Torus.cpp  TorusBuilder.cpp
B-OOP-400-MLH-4-1-raytracer-axel.battigelli/B-OOP-400-MLH-4-1-raytracer-axel.battigelli-main/tests/: test1.cfg
B-OOP-400-MLH-4-1-raytracer-axel.battigelli/B-OOP-400-MLH-4-1-raytracer-axel.battigelli-main/tests/cfg/: test1.cfg  test10.cfg  test11.cfg  test12.cfg  test2.cfg  test20.cfg  test21.cfg  test3.cfg  test30.cfg  test31.cfg  test32.cfg  test4.cfg  test5.cfg  test6.cfg  test7.cfg  test8.cfg
G-CNA-400-MLH-4-1-interstonar-axel.battigelli/G-CNA-400-MLH-4-1-interstonar-axel.battigelli-main/: .gitignore  Cargo.toml  Makefile  flake.nix  rust-toolchain.toml  treefmt.nix
G-CNA-400-MLH-4-1-interstonar-axel.battigelli/G-CNA-400-MLH-4-1-interstonar-axel.battigelli-main/src/: lib.rs
G-CNA-400-MLH-4-1-interstonar-axel.battigelli/G-CNA-400-MLH-4-1-interstonar-axel.battigelli-main/test/: global_exemple1.toml  global_exemple2.toml  global_exemple3.toml  infinite_cylinder.toml  local_exemple1.toml  local_exemple2.toml
G-CNA-400-MLH-4-1-stoneanalysis-axel.battigelli/G-CNA-400-MLH-4-1-stoneanalysis-axel.battigelli-main/: .gitignore  Cargo.toml  Makefile
G-CNA-400-MLH-4-1-stoneanalysis-axel.battigelli/G-CNA-400-MLH-4-1-stoneanalysis-axel.battigelli-main/src/: lib.rs
(+614 files in other folders)
