[dependencies]

[lints.clippy]
enum_glob_use = "deny"
pedantic = "warn"
nursery = "warn"
unwrap_used = "deny"
collection_is_never_read = "allow"

[lints.rust]
unsafe_op_in_unsafe_fn = "forbid"
unsafe_code = "forbid"

[package]
name = "stone_analysis"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
